--- a/index.html
+++ b/index.html
@@ -25,27 +25,67 @@
         <div class="main_content">
             <div class="main_container">
                 <header class="main_header">
-                    <span class="icon">
-                        <svg width="47" height="44" viewBox="0 0 47 44" fill="none" xmlns="http://www.w3.org/2000/svg">
-                          <path d="M21.2969 15.125H40.3906L33.7812 6.4625V1.375C33.7812 0.55 33.1938 0 32.3125 0H14.6875C13.8062 0 13.2188 0.55 13.2188 1.375V5.0875L21.2969 15.125Z" fill="#FF8F1F"/>
-                          <path d="M19.0938 17.875H5.875V23.375V35.75V37.125H19.0938V17.875Z" fill="#FF8F1F"/>
-                          <path d="M22.0312 37.125H41.125V35.75V23.375V17.875H22.0312V37.125Z" fill="#FF8F1F"/>
-                          <path d="M17.625 15.125L12.0437 8.11255L6.60938 15.125H17.625Z" fill="#FF8F1F"/>
-                          <path d="M22.0312 39.875V44H39.6562C40.5375 44 41.125 43.45 41.125 42.625V39.875H22.0312Z" fill="#FF8F1F"/>
-                          <path d="M19.0938 39.875H5.875V42.625C5.875 43.45 6.4625 44 7.34375 44H19.0938V39.875Z" fill="#FF8F1F"/>
-                        </svg>
-                      </span>
-                      <h1>Produto</h1>
-                    <button type="button" class="btn btn-secondary">Secondary</button>
+
+                    <div class="left_header">
+                        <span class="icon">
+                            <svg width="47" height="44" viewBox="0 0 47 44" fill="none" xmlns="http://www.w3.org/2000/svg">
+                              <path d="M21.2969 15.125H40.3906L33.7812 6.4625V1.375C33.7812 0.55 33.1938 0 32.3125 0H14.6875C13.8062 0 13.2188 0.55 13.2188 1.375V5.0875L21.2969 15.125Z" fill="#FF8F1F"/>
+                              <path d="M19.0938 17.875H5.875V23.375V35.75V37.125H19.0938V17.875Z" fill="#FF8F1F"/>
+                              <path d="M22.0312 37.125H41.125V35.75V23.375V17.875H22.0312V37.125Z" fill="#FF8F1F"/>
+                              <path d="M17.625 15.125L12.0437 8.11255L6.60938 15.125H17.625Z" fill="#FF8F1F"/>
+                              <path d="M22.0312 39.875V44H39.6562C40.5375 44 41.125 43.45 41.125 42.625V39.875H22.0312Z" fill="#FF8F1F"/>
+                              <path d="M19.0938 39.875H5.875V42.625C5.875 43.45 6.4625 44 7.34375 44H19.0938V39.875Z" fill="#FF8F1F"/>
+                            </svg>
+                          </span>
+                          <h1>Produto</h1>
+                    </div>
+                    <button type="submit" class="btn_addProduct" id="btn_addProduct">Adiocionar produto</button>
                 </header>
+                <hr class="content_separation">
 
+                <div id="overlay"></div>
+                    <section class="popup_registerProduct" id="popup_registerProduct">
+                        <header class="form_header">
+                            <h2>Adiocionar Produto</h2>
+                        </header>
+                        <hr class="content_separation">
+                        <form>
+                            <div class="below">
+                                <div>
+                                    <label for="nome">Nome <span class="mandatory">*</span></label>
+                                    <input type="text" required class="input_name" id="input_name">
+                                </div>
+                                <div>
+                                    <label for="descricao">Descrição <span class="mandatory">*</span></label>
+                                    <input type="text" required class="input_description" id="input_description">
+                                </div>
+                            </div>
+
+                            <div class="side">
+                                <div>
+                                    <label for="categoria">Categoria <span class="mandatory">*</span></label>
+                                    <input type="text" required class="input_category" id="input_category">
+                                </div>
+                                <div>
+                                    <label for="quantidade">Quantidade <span class="mandatory">*</span></label>
+                                    <input type="" required class="input_amount" id="input_amount">
+                                </div>
+                            </div>
+
+                            <div class="btn_form">
+                                <button type="submit" class="btn_formCancel" id="btn_cancel">Cancelar</button>
+
+                                <button type="submit" class="btn_addProduct" id="btn_formProduct">Adiocionar produto</button>
+
+                            </div>
+
+                        </form>
+
+                    </section>
             </div>
-            
-
-
         </div>
     </main>
 
-    
+    <script src="JavaScript/popup.js"></script>
 </body>
 </html>
