--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
                         <form id="product-form" data-id="">
                             <div class="below">
                                 <div>
+                                    <label>Código</label>
+                                    <input type="text" id="input_id" name="input_id" readonly>
                                     <label for="input_name">Nome <span class="mandatory">*</span></label>
                                     <input type="text" required class="input_name" id="input_name">
                                 </div>
@@ -132,5 +134,6 @@
 
     <script src="JavaScript/popup.js"></script>
     <script src="JavaScript/crud.js"></script>
+    <script src="JavaScript/putResquest.js"></script>
 </body>
 </html>
