--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                             </div>
 
                             <div class="btn_form">
-                                <button type="submit" class="btn_formCancel" id="btn_Editcancel">Cancelar</button>
+                                <button type="button" class="btn_formCancel" id="btn_Editcancel">Cancelar</button>
 
                                 <button type="submit" class="btn_addProduct" id="btn_EditformProduct">Atualizar produto</button>
 
@@ -172,7 +172,6 @@
         </div>
     </main>
 
-    <script src="JavaScript/putResquest.js"></script>
     <script src="JavaScript/popup.js"></script>
     <script type="module" src="JavaScript/crud.js"></script>
     
