GET, POST e DELETE finalizado

--- a/index.html
+++ b/index.html
@@ -155,14 +155,14 @@
                                 </div>
                                 <div>
                                     <label for="input_amount">Quantidade <span class="mandatory">*</span></label>
-                                    <input type="" required class="input_amount" id="input_Editamount" name="Quantidade">
+                                    <input type="number" required class="input_amount" id="input_Editamount" name="Quantidade">
                                 </div>
                             </div>
 
                             <div class="btn_form">
                                 <button type="button" class="btn_formCancel" id="btn_Editcancel">Cancelar</button>
 
-                                <button type="submit" class="btn_addProduct" id="btn_EditformProduct">Atualizar produto</button>
+                                <button type="button" class="btn_addProduct" id="btn_EditformProduct">Atualizar produto</button>
 
                             </div>
                             <div id="feedback-message"></div>
