--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                                 <button type="submit" class="btn_addProduct" id="btn_formProduct">Adiocionar produto</button>
 
                             </div>
-                            <div id="feedback-message"></div>
+                            
                         </form>
 
                     </section>
@@ -165,15 +165,17 @@
                                 <button type="button" class="btn_addProduct" id="btn_EditformProduct">Atualizar produto</button>
 
                             </div>
-                            <div id="feedback-message"></div>
                         </form>
                     </section>
             </div>
         </div>
+
+        <div id="feedback-message" class="feedback-message"></div>
+
     </main>
 
     <script src="JavaScript/popup.js"></script>
-    <script type="module" src="JavaScript/crud.js"></script>
+    <script src="JavaScript/crud.js"></script>
     
 </body>
 </html>
