API crudProduto finalizado

--- a/index.html
+++ b/index.html
@@ -167,6 +167,19 @@
                             </div>
                         </form>
                     </section>
+
+                    <div id="overlay_delete">
+                        <section id="popup_delete" class="popup_delete">
+                            <div>
+                                <p>Tem certeza que deseja excluir esse produto?</p>
+                                <div class="btn_delete">
+                                    <button class="btn_yes" id="btn_yes">Sim</button>
+                                    <button class="btn_no" id="btn_no">Não</button>
+                                </div>
+                        
+                            </div>
+                        </section>
+                    </div>
             </div>
         </div>
 
